--- a/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Toetsmatrijs/Index.cshtml
+++ b/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Toetsmatrijs/Index.cshtml
@@ -50,8 +50,9 @@
                     </td>
                     <td>
                         @*@Html.ActionLink("Edit", "Edit", new { id = item.ID }) |*@
-                        @Html.ActionLink("Details", "Details", new { id = item.ID }) @*|
-                            @Html.ActionLink("Delete", "Delete", new { id = item.ID })*@
+                        @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                        @*@Html.ActionLink("Delete", "Delete", new { id = item.ID })*@
+                        @Html.ActionLink("Toetsmatrijs converten", "Convert", new { id = item.ID })
                     </td>
                 </tr>
             }
