--- a/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Toets/Index.cshtml
+++ b/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Toets/Index.cshtml
@@ -98,7 +98,7 @@
             @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
             @Html.ActionLink("Details", "Details", new { id = item.ID }) |
             @Html.ActionLink("Delete", "Delete", new { id = item.ID }) |
-            @Html.ActionLink("Toetsblad Converten", "Convert", new { id = item.ID, isAntwoord = false }) |
+            @Html.ActionLink("Toetsblad converten", "Convert", new { id = item.ID, isAntwoord = false }) |
             @Html.ActionLink("Antwoordblad Converten", "Convert", new { id = item.ID, isAntwoord = true })
         </td>
     </tr>
