--- a/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Kenniselement/Index.cshtml
+++ b/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Kenniselement/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Kenniselement overzicht</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Kenniselement aanmaken", "Create")
 </p>
 <table class="table">
     <tr>
@@ -48,9 +48,9 @@
                 @Html.DisplayFor(modelItem => item.aantalToepassing)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Aanpassen", "Edit", new { id = item.ID }) |
                 @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                @Html.ActionLink("Verwijderen", "Delete", new { id = item.ID })
             </td>
         </tr>
     }
