--- a/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Toetsmatrijs/Index.cshtml
+++ b/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Toetsmatrijs/Index.cshtml
@@ -9,10 +9,10 @@
         @using (Html.BeginForm("Index", "toetsmatrijs", FormMethod.Get))
         {
         <p>
-            Modeule code: @Html.DropDownList("moduleCode", "All")
+            Module code: @Html.DropDownList("moduleCode", "All")
             <input type="submit" value="Filter" />
         </p>
-        @Html.ActionLink("Create New", "Create")
+        @Html.ActionLink("Toetsmatrijs aanmaken", "Create")
     }
         </p>
     </div>
