--- a/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Kenniselement/Create.cshtml
+++ b/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Kenniselement/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Kenniselement aanmaken</h2>
 
 
 @using (Html.BeginForm())
@@ -64,7 +64,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Terug naar overzicht", "Index")
 </div>
 
 @section Scripts {
