--- a/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Shared/_Layout.cshtml
+++ b/D1-2_B2D3_Casus_Toetsgenerator/D1-2_B2D3_Casus_Toetsgenerator/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
     <div class="container-fluid">
         @RenderBody()
     </div>
-    <div class="container-fluid">
+    <div class="container">
         <div class="text-center">
             <p>Toetsgenerator 2019©</p>
         </div>
