--- a/D2_B2D3_Toetsgenerator/D2_B2D3_Toetsgenerator/Views/ToetsOpgave/Details.cshtml
+++ b/D2_B2D3_Toetsgenerator/D2_B2D3_Toetsgenerator/Views/ToetsOpgave/Details.cshtml
@@ -11,19 +11,19 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Opgave.inhoud)
+            @Html.DisplayNameFor(model => model.Opgave)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Opgave.inhoud)
+            @Html.DisplayFor(model => model.Opgave)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Toets.categorie)
+            @Html.DisplayNameFor(model => model.Toets)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Toets.categorie)
+            @Html.DisplayFor(model => model.Toets)
         </dd>
 
     </dl>
