--- a/D2_B2D3_Toetsgenerator/D2_B2D3_Toetsgenerator/Views/Toets/Index.cshtml
+++ b/D2_B2D3_Toetsgenerator/D2_B2D3_Toetsgenerator/Views/Toets/Index.cshtml
@@ -1,105 +1,109 @@
 ﻿@model IEnumerable<D2_B2D3_Toetsgenerator.Models.Toets>
-
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Toets overzicht";
 }
+<h2>Toets overzicht</h2>
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Toetsmatrijs.moduleNaam)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.categorie)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.studiejaar)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.blokperiode)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.toetsgelegenheid)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.tijdsduur)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.schrapformulier)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.examinatoren)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.maker)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.aanmaakDatum)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.laatstGewijzigdDoor)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.datumGewijzigd)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.status)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Toetsmatrijs.moduleNaam)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.categorie)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.studiejaar)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.blokperiode)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.toetsgelegenheid)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.tijdsduur)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.schrapformulier)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.examinatoren)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.maker)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.aanmaakDatum)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.laatstGewijzigdDoor)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.datumGewijzigd)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.status)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
+@using (Html.BeginForm("Index", "toets", FormMethod.Get))
+{
+    <p>
+        <input name="search"/>
+        <input type="submit" value="search" />
+    </p>
 }
-
-</table>
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Toetsmatrijs.moduleNaam)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.categorie)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.studiejaar)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.blokperiode)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.toetsgelegenheid)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.tijdsduur)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.schrapformulier)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.examinatoren)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.maker)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.aanmaakDatum)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.laatstGewijzigdDoor)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.datumGewijzigd)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.status)
+            </th>
+            <th></th>
+        </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Toetsmatrijs.moduleNaam)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.categorie)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.studiejaar)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.blokperiode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.toetsgelegenheid)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.tijdsduur)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.schrapformulier)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.examinatoren)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.maker)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.aanmaakDatum)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.laatstGewijzigdDoor)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.datumGewijzigd)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.status)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                </td>
+            </tr>
+        }
+    </table>
